--- a/moviesGo-users-service/Makefile
+++ b/moviesGo-users-service/Makefile
@@ -44,4 +44,4 @@ help: ## Display this help screen
 	@grep -h -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
 proto:
-	protoc pkg/pb/*.proto --go_out=plugins=grpc:.
+	protoc pkg/**/pb/*.proto --go_out=plugins=grpc:.
