--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - auth-svc
       - product-svc
       - cart-svc
+      - admin-auth-svc
     restart: always
 
   auth-svc:
@@ -32,7 +33,7 @@ services:
     restart: always
 
   product-svc:
-    image: abhinandkakkadi/moviesgo-product-service
+    image: abhinandkakkadi/moviesgo-products-service
     ports:
       - "50052:50052"
     environment:
@@ -50,6 +51,7 @@ services:
     image: abhinandkakkadi/moviesgo-carts-service
     ports:
       - "50055:50055"
+
     environment:
       - PORT=:50055
       - DB_HOST="carts-db"
