--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.9"
 services:
   api-gateway:
-    image: abhinandkakkadi/moviesgo-api-gateway
+    build:
+      context: moviesGo-api-gateway
+      dockerfile: api-gateway.dockerfile
     environment:
       - PORT=:3000
       - AUTH_SVC_URL=ath-svc:50051
@@ -18,47 +20,52 @@ services:
     restart: always
 
   auth-svc:
-    image: abhinandkakkadi/moviesgo-users-service
+    build:
+      context: moviesGo-users-service
+      dockerfile: user-service.dockerfile
     ports:
       - "50051:50051"
     environment:
       - PORT=:50051
-      - DB_HOST="users-db"
-      - DB_NAME="users"
-      - DB_USER="postgres"
-      - DB_PORT="5432"
-      - DB_PASSWORD="postgres"
+      - DB_HOST=users-db
+      - DB_NAME=users
+      - DB_USER=postgres
+      - DB_PORT=5432
+      - DB_PASSWORD=postgres
     depends_on:
       - users-db
     restart: always
 
   product-svc:
-    image: abhinandkakkadi/moviesgo-products-service
+    build:
+      context: moviesGo-products-service
+      dockerfile: products-service.dockerfile
     ports:
       - "50052:50052"
     environment:
       - PORT=:50052
-      - DB_HOST="product-db"
-      - DB_NAME="products"
-      - DB_USER="postgres"
-      - DB_PORT="5432"
-      - DB_PASSWORD="postgres"
+      - DB_HOST=product-db
+      - DB_NAME=products
+      - DB_USER=postgres
+      - DB_PORT=5432
+      - DB_PASSWORD=postgres
     depends_on:
       - product-db
     restart: always
 
   cart-svc:
-    image: abhinandkakkadi/moviesgo-carts-service
+    build:
+      context: moviesGo-carts-service
+      dockerfile: carts-service.dockerfile
     ports:
       - "50055:50055"
-
     environment:
       - PORT=:50055
-      - DB_HOST="carts-db"
-      - DB_NAME="carts"
-      - DB_USER="postgres"
-      - DB_PORT="5432"
-      - DB_PASSWORD="postgres"
+      - DB_HOST=carts-db
+      - DB_NAME=carts
+      - DB_USER=postgres
+      - DB_PORT=5432
+      - DB_PASSWORD=postgres
       - PRODUCT_SVC_URL=product-svc:50052
     depends_on:
       - carts-db
@@ -66,16 +73,18 @@ services:
     restart: always
 
   admin-auth-svc:
-    image: abhinandkakkadi/moviesgo-admins-service
+    build:
+      context: moviesGo-admins-service
+      dockerfile: admin-service.dockerfile
     ports:
       - "50054:50054"
     environment:
       - PORT=:50054
-      - DB_HOST="admins-db"
-      - DB_NAME="admins"
-      - DB_USER="postgres"
-      - DB_PORT="5432"
-      - DB_PASSWORD="postgres"
+      - DB_HOST=admins-db
+      - DB_NAME=admins
+      - DB_USER=postgres
+      - DB_PORT=5432
+      - DB_PASSWORD=postgres
     depends_on:
       - admins-db
     restart: always
